syntax = "proto3";

package book;

option go_package = "./pb";

import "google/api/annotations.proto";


service BookService {
  rpc GetBook (GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = {
      get: "/v1/books/{id}"
    };
  }
  rpc ListBooks(ListBookRequest) returns (ListBookResponse) {
    option(google.api.http) = {
      get: "/v1/{parent=shelves/*}/books"
    };
  }
}

message Book {
  string id = 1;
  string title = 2;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  string id = 1;
  string title = 2;
}

message ListBookRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListBookResponse {
  repeated Book books = 1;
  string next_page_token = 2;
}